--- a/main_app/static/css/namari-color.css
+++ b/main_app/static/css/namari-color.css
@@ -125,8 +125,8 @@ a:hover, #header.nav-solid nav a:hover {
 
 #banner {
     background: url("../images/banner-images/test3.png") no-repeat right 400px top;
-    background-position: calc(100% + 500px) right;
-    background-size: 700px 700px;
+    
+    background-size:cover;
 }
 
 
