--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -2328,9 +2328,18 @@ blockquote {
     .slvj-lightbox iframe, .slvj-lightbox object, .slvj-lightbox embed {
         height: 432px !important;
     }
-
+    
+    
+    
+         
 }
 
-
+#divider{
+    border-style: none !important;
+    box-sizing:none !important;
+    background-color: blue !important;
+    border-width:100% !important;
+    display: none !important;
+}
 
 
