--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -64,7 +64,7 @@
                         <!--End of Banner Logo-->
 
                         <!--The Logo that is shown on the sticky Navigation Bar-->
-                        <img src="{% static 'images/logo-2.png' %}" id="navigation-logo" alt="Landing Page"/>
+                        <img src="{% static 'images/logo-2.png'" id="navigation-logo" alt="Landing Page"/>
                         <!--End of Navigation Logo-->
 
                     </div>
