--- a/main_app/templates/base2.html
+++ b/main_app/templates/base2.html
@@ -114,10 +114,13 @@
                                 <a href="#about">About</a>
                             </li>
                             <li>
+                                <a href="#gallery">Gallery</a>
+                            </li>
+                            <li>
                                 <a href="#services">Services</a>
                             </li>
                             <li>
-                                <a href="#clients">Affiliates</a>
+                                <a href="#pricing">Affiliates</a>
                             </li>
                             <li>
                                 <a href="#testimonials">Contact</a>
@@ -144,7 +147,7 @@
                 </div>
 
                 <!--Call to Action-->
-                <a href="#" class="button">SCHEDULE YOUR APPOINTMENT TODAY</a>
+                <a href="tel:7035859187" class="button">SCHEDULE YOUR APPOINTMENT TODAY</a>
                 <!--End Call to Action-->
 
             </div>
@@ -242,6 +245,25 @@
 
         </section>
         <!--End of Introduction-->
+<!--Gallery-->
+<aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
+data-featherlight-filter="a">
+
+<a href="{% static 'images/gallery-images/gallery-image-1.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.1s"><img src="{% static 'images/gallery-images/gallery-image-1.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/gallery-image-2.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.3s"><img src="{% static 'images/gallery-images/gallery-image-2.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/gallery-image-3.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.5s"><img src="{% static 'images/gallery-images/gallery-image-3.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/gallery-image-4.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="1.1s"><img src="{% static 'images/gallery-images/gallery-image-4.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/gallery-image-5.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.9s"><img src="{% static 'images/gallery-images/gallery-image-5.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/gallery-image-6.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.7s"><img src="{% static 'images/gallery-images/gallery-image-6.jpg' %}" alt="Landing Page"/></a>
+
+</aside>
+<!--End of Gallery-->
 
 
         <hr id='divider' class='rounded'/>
@@ -290,7 +312,7 @@
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <img src="{% static 'images/pen.png' %}" alt="Dancer"/>
+                    <img src="{% static 'images/pen.png' %}" alt="pen"/>
                 </div>
 
             </div>
@@ -298,67 +320,83 @@
 
         </div>
         <!--End of Content Section-->
-<!--Clients-->
-<section id="clients" class="scrollto clearfix">
+ <!--Pricing Tables-->
+ <section id="pricing" class="secondary-color text-center scrollto clearfix ">
     <div class="row clearfix">
 
-        <div class="col-3">
+        <div class="section-heading">
+            <h3>YOUR CHOICE</h3>
+            <h2 class="section-title">Our Affiliates</h2>
+        </div>
 
-            <div class="section-heading">
-                <h3>TRUST</h3>
-                <h2 class="section-title">Companies who use our services</h2>
-                <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+        <!--Pricing Block-->
+        <a href="https://www.springhillres.com/">
+        <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="pricing-block-content">
+                <h3>Spring Hill Real Estate</h3>
+                <div class="pricing">
+                    <div class="price"><img src="{% static 'images/company-images/springhill.png'%}"/></div>
+                    <p>Search, compare and select from homes, condos, land for sale, and more! </p>
+                </div>
+                <ul>
+                    <li>5 Downloads</li>
+                    <li>2 Extensions</li>
+                    <li>Tutorials</li>
+                    <li>Forum Support</li>
+                    <li>1 year free updates</li>
+                </ul>
+                <a href="#" class="button">BUY TODAY</a>
             </div>
-
         </div>
+    </a>
+        <!--End Pricing Block-->
 
-        <div class="col-2-3">
-
-            <a href="#" class="col-3">
-                <img src="{% static 'images/company-images/nna.png' %}" alt="Company"/>
-                <div class="client-overlay"><span>Tree</span></div>
-            </a>
-            <a href="#" class="col-3">
-                <img src="images/company-images/company-logo2.png" alt="Company"/>
-                <div class="client-overlay"><span>Fingerprint</span></div>
-            </a>
-            <a href="#" class="col-3">
-                <img src="images/company-images/company-logo3.png" alt="Company"/>
-                <div class="client-overlay"><span>The Man</span></div>
-            </a>
-            <a href="#" class="col-3">
-                <img src="images/company-images/company-logo4.png" alt="Company"/>
-                <div class="client-overlay"><span>Mustache</span></div>
-            </a>
-            <a href="#" class="col-3">
-                <img src="images/company-images/company-logo5.png" alt="Company"/>
-                <div class="client-overlay"><span>Goat</span></div>
-            </a>
-            <a href="#" class="col-3">
-                <img src="images/company-images/company-logo6.png" alt="Company"/>
-                <div class="client-overlay"><span>Justice</span></div>
-            </a>
-            <a href="#" class="col-3">
-                <img src="images/company-images/company-logo7.png" alt="Company"/>
-                <div class="client-overlay"><span>Ball</span></div>
-            </a>
-            <a href="#" class="col-3">
-                <img src="images/company-images/company-logo8.png" alt="Company"/>
-                <div class="client-overlay"><span>Cold</span></div>
-            </a>
-
-            <a href="#" class="col-3">
-                <img src="images/company-images/company-logo9.png" alt="Company"/>
-                <div class="client-overlay"><span>Cold</span></div>
-            </a>
-
+        <!--Pricing Block-->
+        <a href="https://www.nationalnotary.org/?gclid=Cj0KCQjwk5ibBhDqARIsACzmgLRQMcZWSQVSXcnjzCm9m4c38la2s_9TvjUOAu0wRCPcrWgJTq-ZQj8aAkT1EALw_wcB">
+        <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="pricing-block-content">
+                <h3>National Notary Assosiation</h3>
+                <div class="pricing">
+                    <div class="price"><img src="{% static 'images/company-images/nna.png'%}"/></div>
+                    <p>NNA is the Nation's leader in notary products, committed to serving US notaries</p>
+                </div>
+                <ul>
+                    <li>15 Downloads</li>
+                    <li>5 Extensions</li>
+                    <li>Tutorials with Files</li>
+                    <li>Forum Support</li>
+                    <li>2 years free updates</li>
+                </ul>
+                <a href="#" class="button">BUY TODAY</a>
+            </div>
         </div>
+    </a>
+        <!--End Pricing Block-->
+
+        <!--Pricing Block-->
+        <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
+            <div class="pricing-block-content">
+                <h3>Business</h3>
+                <p class="pricing-sub">For the whole team</p>
+                <div class="pricing">
+                    <div class="price"><span>$</span>49</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                </div>
+                <ul>
+                    <li>Unlimited Downloads</li>
+                    <li>Unlimited Extensions</li>
+                    <li>HD Video Tutorials</li>
+                    <li>Chat Support</li>
+                    <li>Lifetime free updates</li>
+                </ul>
+                <a href="#" class="button">BUY TODAY</a>
+            </div>
+        </div>
+        <!--End Pricing Block-->
 
     </div>
 </section>
-<!--End of Clients-->
+<!--End of Pricing Tables-->
         <!--Testimonials-->
         <aside id="testimonials" class="scrollto text-center" data-enllax-ratio=".2">
 
@@ -394,7 +432,16 @@
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <h4><strong>Hours</strong></h4>
-                    <p>Monday - Sunday by appointment
+                    <p>
+                        <ul class="no-bullets">
+                        <li>Monday - Thursday 8:00AM - 2:00PM</li>
+                        <br>
+                        <li>Friday - 8:00AM - 3:00PM</li>
+                        <br>
+                        <li>Saturday & Sunday - 10:00AM - 8:00PM</li>
+                        <br>
+                        <li><strong>Available - 7 Days A Week</strong></li>
+                        </ul>
                     </p>
                     
                 </blockquote>
@@ -417,8 +464,6 @@
     <!--Footer-->
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
-
-            <p id="copyright" class="col-2">Made with love by <a href="https://www.shapingrain.com">ShapingRain</a></p>
 
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
