--- a/main_app/templates/base2.html
+++ b/main_app/templates/base2.html
@@ -75,7 +75,7 @@
                         <!--Social Icons in Header-->
                         <ul class="social-icons">
                             <li>
-                                <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
+                                <a target="_blank" title="Facebook" href="https://www.facebook.com/VivianRashidiRealtor/">
                                     <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                                 </a>
                             </li>
@@ -94,11 +94,7 @@
                                     <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
                                 </a>
                             </li>
-                            <li>
-                                <a target="_blank" title="behance" href="http://www.behance.net">
-                                    <i class="fa fa-behance fa-1x"></i><span>Behance</span>
-                                </a>
-                            </li>
+                            
                         </ul>
                         <!--End of Social Icons in Header-->
 
@@ -249,18 +245,18 @@
 <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
 data-featherlight-filter="a">
 
-<a href="{% static 'images/gallery-images/gallery-image-1.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.1s"><img src="{% static 'images/gallery-images/gallery-image-1.jpg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/gallery-image-2.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.3s"><img src="{% static 'images/gallery-images/gallery-image-2.jpg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/gallery-image-3.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.5s"><img src="{% static 'images/gallery-images/gallery-image-3.jpg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/gallery-image-4.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="1.1s"><img src="{% static 'images/gallery-images/gallery-image-4.jpg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/gallery-image-5.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.9s"><img src="{% static 'images/gallery-images/gallery-image-5.jpg' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/gallery-image-6.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.7s"><img src="{% static 'images/gallery-images/gallery-image-6.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/papersign.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.1s"><img src="{% static 'images/gallery-images/papersign.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/finalpic.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.3s"><img src="{% static 'images/gallery-images/finalpic.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/stackpaper.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.5s"><img src="{% static 'images/gallery-images/stackpaper.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/notarystamp.webp' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="1.1s"><img src="{% static 'images/gallery-images/notarystamp.webp' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/notaryred.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.9s"><img src="{% static 'images/gallery-images/notaryred.jpg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/bluerevision.jpg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.7s"><img src="{% static 'images/gallery-images/bluerevision.jpg' %}" alt="Landing Page"/></a>
 
 </aside>
 <!--End of Gallery-->
@@ -305,14 +301,14 @@ data-featherlight-filter="a">
                         
                     </p>
                     <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
-                    <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
+                    <a href="#" data-videoid="PfRyg2AsKm4" data-videosite="youtube" class="button video link-lightbox">
                         WATCH VIDEO <i class="fa fa-play" aria-hidden="true"></i>
                     </a>
                 </div>
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <img src="{% static 'images/pen.png' %}" alt="pen"/>
+                    <img class="resize" src="{% static 'images/pen.png' %}" alt="pen"/>
                 </div>
 
             </div>
@@ -325,27 +321,21 @@ data-featherlight-filter="a">
     <div class="row clearfix">
 
         <div class="section-heading">
-            <h3>YOUR CHOICE</h3>
-            <h2 class="section-title">Our Affiliates</h2>
+            <h3>Affiliates</h3>
+            <h2 class="section-title">Other Services</h2>
         </div>
 
         <!--Pricing Block-->
-        <a href="https://www.springhillres.com/">
+        <a href="https://www.brightmlshomes.com/vivian-rashidi">
         <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
             <div class="pricing-block-content">
                 <h3>Spring Hill Real Estate</h3>
+                <br><p class="pricing-sub">Search, compare and select from homes, condos, land for sale, and more</p>
                 <div class="pricing">
-                    <div class="price"><img src="{% static 'images/company-images/springhill.png'%}"/></div>
-                    <p>Search, compare and select from homes, condos, land for sale, and more! </p>
+                    <div class="price"><img style="width: 180px;height 180px;" src="{% static 'images/company-images/springhill.png'%}"/></div>
                 </div>
-                <ul>
-                    <li>5 Downloads</li>
-                    <li>2 Extensions</li>
-                    <li>Tutorials</li>
-                    <li>Forum Support</li>
-                    <li>1 year free updates</li>
-                </ul>
-                <a href="#" class="button">BUY TODAY</a>
+                
+                <a href="https://www.brightmlshomes.com/vivian-rashidi" class="button">Visit Website</a>
             </div>
         </div>
     </a>
@@ -356,42 +346,32 @@ data-featherlight-filter="a">
         <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.6s">
             <div class="pricing-block-content">
                 <h3>National Notary Assosiation</h3>
+                <br><p class="pricing-sub">Certified by the NNA</p>
                 <div class="pricing">
-                    <div class="price"><img src="{% static 'images/company-images/nna.png'%}"/></div>
-                    <p>NNA is the Nation's leader in notary products, committed to serving US notaries</p>
+                    <div class="price"><img style="height: 180px;" class="nna" src="{% static 'images/company-images/nna.png'%}"/></div>
                 </div>
                 <ul>
-                    <li>15 Downloads</li>
-                    <li>5 Extensions</li>
-                    <li>Tutorials with Files</li>
-                    <li>Forum Support</li>
-                    <li>2 years free updates</li>
+                    <li>Certified by the NNA</li>
                 </ul>
-                <a href="#" class="button">BUY TODAY</a>
+                <a href="https://www.nationalnotary.org/?gclid=Cj0KCQjwk5ibBhDqARIsACzmgLRQMcZWSQVSXcnjzCm9m4c38la2s_9TvjUOAu0wRCPcrWgJTq-ZQj8aAkT1EALw_wcB" class="button">VISIT WEBSITE</a>
             </div>
         </div>
     </a>
         <!--End Pricing Block-->
 
         <!--Pricing Block-->
+        <a href="https://notarycafe.com/vivian.rashidi">
         <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
             <div class="pricing-block-content">
-                <h3>Business</h3>
-                <p class="pricing-sub">For the whole team</p>
+                <h3>Notary Cafe</h3>
+                <br><p class="pricing-sub"> A Resource for connecting professional notaries with the people who need them</p>
                 <div class="pricing">
-                    <div class="price"><span>$</span>49</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <div class="price"><img style="height: 180px;"src="{% static 'images/company-images/notarycafe.jpeg'%}"/></div>
                 </div>
-                <ul>
-                    <li>Unlimited Downloads</li>
-                    <li>Unlimited Extensions</li>
-                    <li>HD Video Tutorials</li>
-                    <li>Chat Support</li>
-                    <li>Lifetime free updates</li>
-                </ul>
-                <a href="#" class="button">BUY TODAY</a>
+                <a href="https://notarycafe.com/vivian.rashidi" class="button">VISIT WEBSITE</a>
             </div>
         </div>
+    </a>
         <!--End Pricing Block-->
 
     </div>
@@ -412,7 +392,7 @@ data-featherlight-filter="a">
                     <h4><strong>Perfect Notary Every Time, Notarize With Vivian</strong></h4>
                     <p>Please contact us directly with any questions, comments, or scheduling inquiries you may have. 
                         If you have any important questions regarding your documents, please contact an attorney or the person who provided you the documents.
-                        <br/><i>Disclaimer: We are Notary Publics in the Commonwealth of Virginia and not licensed to give legal advice.</i></br>
+                        <br/>
                      </p>
                 </blockquote>
                 <!-- End of Testimonial-->
@@ -425,6 +405,7 @@ data-featherlight-filter="a">
 
                         <br><strong>703-585-9187</strong></br>
                         <br><strong>NivicoNotaryServices@Gmail.com</strong></br>
+                        <br><i>Disclaimer: We are Notary Publics in the Commonwealth of Virginia and not licensed to give legal advice.</i></br>
                     </p>
                 </blockquote>
                 <!-- End of Testimonial-->
