--- a/main_app/templates/base2.html
+++ b/main_app/templates/base2.html
@@ -80,21 +80,10 @@
                                 </a>
                             </li>
                             <li>
-                                <a target="_blank" title="Google+" href="http://google.com/+username">
-                                    <i class="fa fa-google-plus fa-1x"></i><span>Google+</span>
+                                <a target="_blank" title="Google+" href="mailto: vlrashidi@yahoo.com">
+                                    <i class="fa fa-envelope fa-1x"></i><span>Google+</span>
                                 </a>
-                            </li>
-                            <li>
-                                <a target="_blank" title="Twitter" href="http://www.twitter.com/username">
-                                    <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a target="_blank" title="Instagram" href="http://www.instagram.com/username">
-                                    <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
-                                </a>
-                            </li>
-                            
+                            </li>        
                         </ul>
                         <!--End of Social Icons in Header-->
 
