add images and icons

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -66,6 +66,16 @@
                                 <a target="_blank" title="Google+" href="mailto: vlrashidi@yahoo.com">
                                     <i class="fa fa-envelope fa-1x"></i><span>Google+</span>
                                 </a>
+                            </li>
+                            <li>
+                                <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/vivian-rashidi-a81094232/">
+                                        <i class="fa fa-linkedin fa-1x"></i><span>LinkedIn</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" title="Twitter" href="https://twitter.com/Vivian_Rashidi">
+                                        <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
+                                </a>
                             </li>        
                         </ul>
                     </aside>
@@ -220,7 +230,7 @@ data-featherlight-filter="a">
                         <footer>— Ken Salazar, American Politician</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
-                    
+                    <img src="{% static 'images/gallery-images/papersign.jpg' %}" alt="Landing Page"/>
                 </div>
                 <!--End Content Left Side-->
                 
@@ -252,7 +262,9 @@ data-featherlight-filter="a">
 
                 <div class="col-3">
                     <img class="resize" src="{% static 'images/pen.png' %}" alt="pen"/>
+                    <img src="{% static 'images/gallery-images/bluerevision.jpg' %}" alt="Landing Page"/>
                 </div>
+                
 
             </div>
 
@@ -382,22 +394,32 @@ data-featherlight-filter="a">
     <!--Footer-->
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
-
+            <img src="{% static 'images/vivian_footer.jpeg' %}" alt="Landing Page"/>
             <!--Social Icons in Footer-->
             <ul class="col-2 social-icons">
                 <li> 
                     <a target="_blank" title="Facebook" href="https://www.facebook.com/VivianRashidiRealtor/">
                         <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                     </a>
+                </li>
                 <li>
                     <a target="_blank" title="Google+" href="mailto: vlrashidi@yahoo.com">
                             <i class="fa fa-envelope fa-1x"></i><span>Google+</span>
                     </a>
                 </li>
+                <li>
+                    <a target="_blank" title="LinkedIn" href="https://www.linkedin.com/in/vivian-rashidi-a81094232/">
+                            <i class="fa fa-linkedin fa-1x"></i><span>LinkedIn</span>
+                    </a>
+                </li>
+                <li>
+                    <a target="_blank" title="Twitter" href="https://twitter.com/Vivian_Rashidi">
+                            <i class="fa fa-twitter fa-1x"></i><span>Twitter</span>
+                    </a>
+                </li>
             </ul>
             <!--End of Social Icons in Footer-->
         </div>
-        
     </footer>
     <!--End of Footer-->
 
