--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -230,7 +230,7 @@ data-featherlight-filter="a">
                         <footer>— Ken Salazar, American Politician</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
-                    <img src="{% static 'images/gallery-images/papersign.jpg' %}" alt="Landing Page"/>
+                    <img src="{% static 'images/stampVA2.gif' %}" alt="Landing Page"/>
                 </div>
                 <!--End Content Left Side-->
                 
@@ -261,8 +261,8 @@ data-featherlight-filter="a">
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <img class="resize" src="{% static 'images/pen.png' %}" alt="pen"/>
-                    <img src="{% static 'images/gallery-images/bluerevision.jpg' %}" alt="Landing Page"/>
+                    <img class="resize" src="{% static 'images/penNew.png' %}" alt="pen"/>
+                    <img id="smallpen" src="{% static 'images/man_writing.jpeg' %}" alt="Landing Page"/>
                 </div>
                 
 
@@ -301,7 +301,7 @@ data-featherlight-filter="a">
         <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.6s">
             <div class="pricing-block-content">
                 <h3>Nivico Notary Services Partner</h3>
-                <br><p class="pricing-sub">Partner website
+                <br><p class="pricing-sub">Partner website                                       
                 </p>
                 <div class="pricing">
                     <div class="price"><img style="height: 180px;" class="nna" src="{% static 'images/company-images/nna.png'%}"/></div>
