enlax effect pen

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -261,7 +261,7 @@ data-featherlight-filter="a">
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <img class="resize" src="{% static 'images/penNew.png' %}" alt="pen"/>
+                    <img data-enllax-ratio=".5" data-enllax-type="foreground" class="resize" src="{% static 'images/penNew.png' %}" alt="pen"/>
                     <img id="smallpen" src="{% static 'images/man_writing.jpeg' %}" alt="Landing Page"/>
                 </div>
                 
@@ -301,7 +301,7 @@ data-featherlight-filter="a">
         <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.6s">
             <div class="pricing-block-content">
                 <h3>Nivico Notary Services Partner</h3>
-                <br><p class="pricing-sub">Partner website                                       
+                <br><p class="pricing-sub">Partner website- schedule your appointment today                                                                         
                 </p>
                 <div class="pricing">
                     <div class="price"><img style="height: 180px;" class="nna" src="{% static 'images/company-images/nna.png'%}"/></div>
