--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -230,7 +230,7 @@ data-featherlight-filter="a">
                         <footer>— Ken Salazar, American Politician</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
-                    <img src="{% static 'images/stampVA2.gif' %}" alt="Landing Page"/>
+                    <img src="{% static 'images/gold_stamp.png' %}" alt="Landing Page"/>
                 </div>
                 <!--End Content Left Side-->
                 
@@ -290,7 +290,7 @@ data-featherlight-filter="a">
                     <div class="price"><img style="width: 180px;height 180px;" src="{% static 'images/company-images/springhill.png'%}"/></div>
                 </div>
                 
-                <a href="https://www.brightmlshomes.com/vivian-rashidi" class="button">Affiliate Website</a>
+                <a href="https://www.brightmlshomes.com/vivian-rashidi" class="button">Visit Website</a>
             </div>
         </div>
     </a>
@@ -300,14 +300,14 @@ data-featherlight-filter="a">
         <a href="https://www.nationalnotary.org/?gclid=Cj0KCQjwk5ibBhDqARIsACzmgLRQMcZWSQVSXcnjzCm9m4c38la2s_9TvjUOAu0wRCPcrWgJTq-ZQj8aAkT1EALw_wcB">
         <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.6s">
             <div class="pricing-block-content">
-                <h3>Nivico Notary Services Partner</h3>
-                <br><p class="pricing-sub">Partner website- schedule your appointment today                                                                         
+                <h3>Nivico Notary Services</h3>
+                <br><p class="pricing-sub"> Website - See services, schedule your appointment today                                                                         
                 </p>
                 <div class="pricing">
                     <div class="price"><img style="height: 180px;" class="nna" src="{% static 'images/company-images/nna.png'%}"/></div>
                 </div>
                 
-                <a href="https://viviansniviconotaryservices.com/" class="button">Affiliate Website</a>
+                <a href="https://viviansniviconotaryservices.com/" class="button">Visit Website</a>
             </div>
         </div>
     </a>
@@ -322,7 +322,7 @@ data-featherlight-filter="a">
                 <div class="pricing">
                     <div class="price"><img style="height: 180px;"src="{% static 'images/company-images/notarycafe.jpeg'%}"/></div>
                 </div>
-                <a href="https://notarycafe.com/vivian.rashidi" class="button">Affiliate Website</a>
+                <a href="https://notarycafe.com/vivian.rashidi" class="button">Visit Website</a>
             </div>
         </div>
     </a>
