--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -44,7 +44,7 @@
 
 <div id="wrapper">
 
-    <header id="banner" class="scrollto clearfix" data-enllax-ratio=".5" style="background-position:right 500px;">
+    <header id="banner" class="scrollto clearfix" data-enllax-ratio=".5">
         <div id="header" class="nav-collapse">
             <div class="row clearfix">
                 <div class="col-1">
