--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -170,8 +170,8 @@
                         <div class="icon-block-description">
                             <h4>All forms MUST be Valid (unexpired) Official Government ID's</h4>
                             <p>
-                                <ul>
-                                <li/>State-issued Driver’s License</li>
+                                <ul id="doclist">
+                                <li/>State-issued Driver's License</li>
                                 <li>State-issued ID card</li>
                                 <li>United States Military ID</li>
                                 <li>United States passport</li>
@@ -242,7 +242,7 @@ data-featherlight-filter="a">
                         
                     </div>
                     <p>
-                        <ol>
+                        <ol id="hours">
                             <li><b>Convenience</b>:  I am available and within reach,  I understand that you live a busy life. That’s why I am here to make it hassle-free by bringing my services to you.</li>
                             <li><b>Expertise</b>: Have peace of mind by hiring a knowledgeable and professional notary to take care of your important documents.</li>
                             <li><b>After-Hours Availability</b>: As a Mobile Notary I am flexible and ready to serve your Notary needs on weekends and holidays.</li>
