--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -36,7 +36,7 @@
     box-sizing: border-box;
 }
 
-body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, blockquote, th, td {
+body, div, dl, dt, dd, ol, li, h1, h2, h3, h4, h5, h6, pre, form, blockquote, th, td {
     margin: 0;
     padding: 0;
     direction: ltr;
@@ -2324,6 +2324,19 @@ blockquote {
     .slvj-lightbox iframe, .slvj-lightbox object, .slvj-lightbox embed {
         height: 432px !important;
     }
+
+#doclist{
+    margin-left:100px ;
+}
+ul {
+    padding: 0;
+    direction: ltr;
+    
+    
+  }
+  #hours{
+    list-style: none;
+  }
 
 }
 
