--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,7 +19,7 @@
 
     
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
-    <link href="{% static 'css/animate.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/animate.css' %}" rel="stylesheet" type="text/css"> 
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
@@ -145,17 +145,17 @@
                 <div class="col-2-3">
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
                         <div class="icon">
-                            <i class="fa fa-tablet fa-2x"></i>
+                            <i class="fa fa-check-square-o fa-2x"></i>
                         </div>
                         <div class="icon-block-description">
                             <h4>Commissoned In The State of Virginia </h4>
-                            <p> My services include; real estate loan signing, POA, wills, mobile, & remote E-notary (RON), apostilles, immigration forms, car titles, general Notaries, translations, multi-Lingual, arabic, and farsi.</p>
+                            <p>My services include real estate loan signing, POA, wills, mobile and remote E-notary (RON), apostilles, immigration forms, car titles, general notaries, translations, multilingual, Arabic, and Farsi.</p>
                         </div>
                     </div>
                     
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
                         <div class="icon">
-                            <i class="fa fa-bolt fa-2x"></i>
+                            <i class="fa fa-map-marker fa-2x"></i>
                         </div>
                         <div class="icon-block-description">
                             <h4>Where I Service</h4>
@@ -165,7 +165,7 @@
                     
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
                         <div class="icon">
-                            <i class="fa fa-tablet fa-2x"></i>
+                            <i class="fa fa-id-card-o fa-2x"></i>
                         </div>
                         <div class="icon-block-description">
                             <h4>All forms MUST be Valid (unexpired) Official Government ID's</h4>
@@ -182,7 +182,7 @@
                     
                     <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
                         <div class="icon">
-                            <i class="fa fa-rocket fa-2x"></i>
+                            <i class="fa fa-pencil-square-o fa-2x"></i>
                         </div>
                         <div class="icon-block-description">
                             <h4>Other Notary Services</h4>
@@ -429,18 +429,19 @@ data-featherlight-filter="a">
 </div>
 
 <!-- Include JavaScript resources -->
-<script src="{% static 'js/jquery.1.8.3.min.js' %}"></script>
-<script src="{% static 'js/wow.min.js' %}"></script>
-<script src="{% static 'js/featherlight.min.js' %}"></script>
-<script src="{% static 'js/featherlight.gallery.min.js' %}"></script>
-<script src="{% static 'js/jquery.enllax.min.js' %}"></script> 
-<script src="{% static 'js/jquery.scrollUp.min.js' %}"></script> 
-<script src="{% static 'js/jquery.easing.min.js' %}"></script>
-<script src="{% static 'js/jquery.stickyNavbar.min.js' %}"></script>
-<script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-<script src="{% static 'js/images-loaded.min.js' %}"></script>
-<script src="{% static 'js/lightbox.min.js' %}"></script>
-<script src="{% static 'js/site.js' %}"></script>
+<script src="{% static 'js/jquery.1.8.3.min.js' %}" defer></script>
+<script src="{% static 'js/site.js' %}" defer></script>
+<script src="{% static 'js/jquery.stickyNavbar.min.js' %}"defer></script>
+<script src="{% static 'js/jquery.waypoints.min.js' %}"defer></script>
+<script src="{% static 'js/images-loaded.min.js' %}"defer></script>
+<script src="{% static 'js/wow.min.js' %}" async></script>
+<script src="{% static 'js/featherlight.min.js' %}"async></script>
+<script src="{% static 'js/featherlight.gallery.min.js' %}"async></script>
+<script src="{% static 'js/jquery.enllax.min.js' %}"async></script> 
+<script src="{% static 'js/jquery.scrollUp.min.js' %}"async></script> 
+<script src="{% static 'js/jquery.easing.min.js' %}"async></script>
+<script src="{% static 'js/lightbox.min.js' %}" async></script>
+
 
 
 
