icon,text, polishing up changes

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -148,8 +148,8 @@
                             <i class="fa fa-check-square-o fa-2x"></i>
                         </div>
                         <div class="icon-block-description">
-                            <h4>Commissoned In The State of Virginia </h4>
-                            <p>My services include real estate loan signing, POA, wills, mobile and remote E-notary (RON), apostilles, immigration forms, car titles, general notaries, translations, multilingual, Arabic, and Farsi.</p>
+                            <h4>Commissioned in the State of Virginia</h4>
+                            <p>Our Virginia notary services include real estate loan signings, POA forms, wills, RON, apostilles, immigration paperwork, car titles, general notarizations, and translations in Arabic and Farsi.</p>
                         </div>
                     </div>
                     
@@ -158,8 +158,8 @@
                             <i class="fa fa-map-marker fa-2x"></i>
                         </div>
                         <div class="icon-block-description">
-                            <h4>Where I Service</h4>
-                            <p>Alexandria, Tyson's Corner, Mclean, Springfield, ft. Belvoir, Annandale, Falls Church, Lorton, Lake Ridge, Woodbridge, Manassas. Other location - please call for quotes</p>
+                            <h4>Where We Service</h4>
+                            <p>We offer services in various locations including Alexandria, Tyson's Corner, McLean, Springfield, Fort Belvoir, Annandale, Falls Church, Lorton, Lake Ridge, Woodbridge, and Manassas. For quotes on other locations, please give us a call.</p>
                         </div>
                     </div>
                     
@@ -172,9 +172,9 @@
                             <p>
                                 <ul style="margin-left:-25px;" id="doclist">
                                 <li/>State-issued Driver's License</li>
-                                <li>State-issued ID card</li>
+                                <li>State-issued ID Card</li>
                                 <li>United States Military ID</li>
-                                <li>United States passport</li>
+                                <li>United States Passport</li>
                                 </ul>
                             </p>
                         </div>
@@ -185,8 +185,8 @@
                             <i class="fa fa-pencil-square-o fa-2x"></i>
                         </div>
                         <div class="icon-block-description">
-                            <h4>Other Notary Services</h4>
-                            <p>Affidavits, Oaths, Adoption Papers, Divorce Documents, School Documents, Permission to Travel Documents, Medical Records, and more.
+                            <h4>Additional Notary Services</h4>
+                            <p>We assist with various documents such as affidavits, oaths, adoption papers, divorce documents, school documents, travel permissions, medical records, and more.
                             </p>
                         </div>
                     </div>
@@ -215,7 +215,7 @@ data-featherlight-filter="a">
 <!--End of Gallery-->
 
 
-        <hr id='divider' class='rounded'/>
+        
         <!--Content Section-->
         <div id="services" class="scrollto clearfix">
 
@@ -243,11 +243,11 @@ data-featherlight-filter="a">
                     </div>
                     <p>
                         <ol id="hours">
-                            <li><b>Convenience</b>:  I am available and within reach,  I understand that you live a busy life. That’s why I am here to make it hassle-free by bringing my services to you.</li>
-                            <li><b>Expertise</b>: Have peace of mind by hiring a knowledgeable and professional notary to take care of your important documents.</li>
-                            <li><b>After-Hours Availability</b>: As a Mobile Notary I am flexible and ready to serve your Notary needs on weekends and holidays.</li>
-                            <li><b>Medical Documents</b>: If someone is in the hospital, legal documents may need to be signed, and as a mobile notary I am equipped for such situations.</li>
-                            <li><b>Reasonable Rates</b>: Fees vary per notarial requirements. Call/Email for quotes.</li>
+                            <li><b>Convenience</b>:  We are readily available and easily accessible, understanding that you lead a busy life. As such, we offer hassle-free services by bringing them directly to you.</li>
+                            <li><b>Expertise</b>: Experience peace of mind by hiring a knowledgeable and professional notary to handle your important documents.</li>
+                            <li><b>After-Hours Availability</b>: As a mobile notary, we am flexible and ready to meet your notary needs on weekends and holidays.</li>
+                            <li><b>Medical Documents</b>: As a mobile notary, we are equipped to handle situations where legal documents may need to be signed while someone is in the hospital.</li>
+                            <li><b>Reasonable Rates</b>: Please contact us by phone or email for a quote as fees may vary depending on the specific notarial requirements.</li>
                         </ol>
                     </p>
                     <p>
@@ -288,7 +288,7 @@ data-featherlight-filter="a">
         <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.4s">
             <div class="pricing-block-content">
                 <h3>Spring Hill Real Estate</h3>
-                <br><p class="pricing-sub">Search, compare and select from homes, condos, land for sale, and more</p>
+                <br><p class="pricing-sub">Search, compare, and choose from a variety of properties including homes, condos, and land for sale.</p>
                 <div class="pricing">
                     <div class="price"><img style="width: 180px;height 180px;" src="{% static 'images/company-images/springhill.webp'%}"/></div>
                 </div>
@@ -304,7 +304,7 @@ data-featherlight-filter="a">
         <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.6s">
             <div class="pricing-block-content">
                 <h3>Nivico Notary Services</h3>
-                <br><p class="pricing-sub"> Website - See services, schedule your appointment today                                                                         
+                <br><p class="pricing-sub"> Visit our website to explore our services and schedule your appointment today.     
                 </p>
                 <div class="pricing">
                     <div class="price"><img style="height: 180px;" class="nna" src="{% static 'images/company-images/nna.webp'%}"/></div>
@@ -321,7 +321,7 @@ data-featherlight-filter="a">
         <div class="pricing-block col-3 wow fadeInUp" data-wow-delay="0.8s">
             <div class="pricing-block-content">
                 <h3>Notary Cafe</h3>
-                <br><p class="pricing-sub"> Connects professional notaries with the people who need them</p>
+                <br><p class="pricing-sub"> Connects individuals in need of a professional notary with experienced notaries who can assist them.</p>
                 <div class="pricing">
                     <div class="price"><img style="height: 180px;"src="{% static 'images/company-images/notarycafe.webp'%}"/></div>
                 </div>
@@ -347,8 +347,7 @@ data-featherlight-filter="a">
                 <!--User Testimonial-->
                 <blockquote class="col-3 testimonial classic">
                     <h4><strong>Perfect Notary Every Time, Notarize With Vivian</strong></h4>
-                    <p>Please contact us directly with any questions, comments, or scheduling inquiries you may have. 
-                        If you have any important questions regarding your documents, please contact an attorney or the person who provided you the documents.
+                    <p>For any questions, comments, or scheduling inquiries, please contact us directly. However, if you have important questions related to your documents, we recommend consulting with an attorney or the individual who provided you the documents.
                         <br/>
                      </p>
                 </blockquote>
@@ -399,6 +398,8 @@ data-featherlight-filter="a">
         <div class="row clearfix">
             <img src="{% static 'images/vivian_footer.webp' %}" alt="Landing Page"/>
             <!--Social Icons in Footer-->
+            <div class="col-2">
+            </div>
             <ul class="col-2 social-icons">
                 <li> 
                     <a target="_blank" title="Facebook" href="https://www.facebook.com/VivianRashidiRealtor/">
@@ -429,18 +430,27 @@ data-featherlight-filter="a">
 </div>
 
 <!-- Include JavaScript resources -->
-<script src="{% static 'js/jquery.1.8.3.min.js' %}" defer></script>
-<script src="{% static 'js/site.js' %}" defer></script>
-<script src="{% static 'js/jquery.stickyNavbar.min.js' %}"defer></script>
-<script src="{% static 'js/jquery.waypoints.min.js' %}"defer></script>
+<script src="{% static 'js/jquery.1.8.3.min.js' %}"defer ></script>
+<script src="{% static 'js/jquery.easing.min.js' %}"defer></script>
 <script src="{% static 'js/images-loaded.min.js' %}"defer></script>
-<script src="{% static 'js/wow.min.js' %}" async></script>
-<script src="{% static 'js/featherlight.min.js' %}"async></script>
-<script src="{% static 'js/featherlight.gallery.min.js' %}"async></script>
-<script src="{% static 'js/jquery.enllax.min.js' %}"async></script> 
-<script src="{% static 'js/jquery.scrollUp.min.js' %}"async></script> 
-<script src="{% static 'js/jquery.easing.min.js' %}"async></script>
-<script src="{% static 'js/lightbox.min.js' %}" async></script>
+<script src="{% static 'js/jquery.waypoints.min.js' %}"defer></script>
+<script src="{% static 'js/jquery.stickyNavbar.min.js' %}"defer></script>
+<script src="{% static 'js/jquery.scrollUp.min.js' %}"defer></script> 
+<script src="{% static 'js/featherlight.min.js' %}"defer></script>
+<script src="{% static 'js/featherlight.gallery.min.js' %}"defer></script>
+<script src="{% static 'js/wow.min.js' %}"defer ></script>
+<script src="{% static 'js/jquery.enllax.min.js' %}"defer></script> 
+<script src="{% static 'js/lightbox.min.js' %}"defer ></script>
+<script src="{% static 'js/site.js' %}"defer></script>
+
+
+
+
+
+
+
+
+
 
 
 
