--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -51,8 +51,8 @@
 
                     
                     <div id="logo">
-                        <img src="{% static 'images/logo.webp' %}" id="banner-logo" alt="Landing Page"/>
-                        <img src="{% static 'images/logo.webp' %}" id="navigation-logo" alt="Landing Page"/>
+                        <img src="{% static 'images/logo.svg' %}" id="banner-logo" alt="Landing Page"/>
+                        <img src="{% static 'images/logo.svg' %}" id="navigation-logo" alt="Landing Page"/>
                     </div>
                     
                     <aside>
@@ -137,7 +137,6 @@
             <div class="row clearfix">
                 <div class="col-3">
                     <div class="section-heading">
-                        <h3>SUCCESS</h3>
                         <h2 class="section-title">About Us</h2>
                         <p class="section-subtitle">Disclaimer: Notary Publics in the Commonwealth of Virginia are not licensed to give legal advice. Consult with a lawyer. </p>
                     </div>
@@ -198,18 +197,18 @@
 <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
 data-featherlight-filter="a">
 
-<a href="{% static 'images/gallery-images/papersign.webp' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.1s"><img src="{% static 'images/gallery-images/papersign.webp' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/finalpic.webp' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.3s"><img src="{% static 'images/gallery-images/finalpic.webp' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/stackpaper.webp' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.5s"><img src="{% static 'images/gallery-images/stackpaper.webp' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/notarystamp.webp' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="1.1s"><img src="{% static 'images/gallery-images/notarystamp.webp' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/notaryred.webp' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.9s"><img src="{% static 'images/gallery-images/notaryred.webp' %}" alt="Landing Page"/></a>
-<a href="{% static 'images/gallery-images/bluerevision.webp' %}" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.7s"><img src="{% static 'images/gallery-images/bluerevision.webp' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/papersign.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.1s"><img src="{% static 'images/gallery-images/papersign.svg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/finalpic.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.3s"><img src="{% static 'images/gallery-images/finalpic.svg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/stackpaper.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.5s"><img src="{% static 'images/gallery-images/stackpaper.svg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/notarystamp.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="1.1s"><img src="{% static 'images/gallery-images/notarystamp.svg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/notaryred.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.9s"><img src="{% static 'images/gallery-images/notaryred.svg' %}" alt="Landing Page"/></a>
+<a href="{% static 'images/gallery-images/bluerevision.svg' %}" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.7s"><img src="{% static 'images/gallery-images/bluerevision.svg' %}" alt="Landing Page"/></a>
 
 </aside>
 <!--End of Gallery-->
@@ -230,7 +229,7 @@ data-featherlight-filter="a">
                         <footer>— Ken Salazar, American Politician</footer>
                     </blockquote>
                     <!-- End of Testimonial-->
-                    <img src="{% static 'images/gold_stamp.webp' %}" alt="Landing Page"/>
+                    <img src="{% static 'images/gold_stamp.svg' %}" alt="Landing Page"/>
                 </div>
                 <!--End Content Left Side-->
                 
@@ -264,7 +263,7 @@ data-featherlight-filter="a">
                 <!--End Content Right Side-->
 
                 <div class="col-3">
-                    <img data-enllax-ratio=".5" data-enllax-type="foreground" class="resize" src="{% static 'images/penNew.webp' %}" alt="pen"/>
+                    <img data-enllax-ratio=".5" data-enllax-type="foreground" class="resize" src="{% static 'images/penNew.svg' %}" alt="pen"/>
                     
                 </div>
                 
@@ -290,7 +289,7 @@ data-featherlight-filter="a">
                 <h3>Spring Hill Real Estate</h3>
                 <br><p class="pricing-sub">Search, compare, and choose from a variety of properties including homes, condos, and land for sale.</p>
                 <div class="pricing">
-                    <div class="price"><img style="width: 180px;height 180px;" src="{% static 'images/company-images/springhill.webp'%}"/></div>
+                    <div class="price"><img style="width: 180px;height 180px;" src="{% static 'images/company-images/springhill.svg'%}"/></div>
                 </div>
                 
                 <a href="https://www.brightmlshomes.com/vivian-rashidi" class="button">Visit Website</a>
@@ -307,7 +306,7 @@ data-featherlight-filter="a">
                 <br><p class="pricing-sub"> Visit our website to explore our services and schedule your appointment today.     
                 </p>
                 <div class="pricing">
-                    <div class="price"><img style="height: 180px;" class="nna" src="{% static 'images/company-images/nna.webp'%}"/></div>
+                    <div class="price"><img style="height: 180px;" class="nna" src="{% static 'images/company-images/nna.svg'%}"/></div>
                 </div>
                 
                 <a href="https://viviansniviconotaryservices.com/" class="button">Visit Website</a>
@@ -323,7 +322,7 @@ data-featherlight-filter="a">
                 <h3>Notary Cafe</h3>
                 <br><p class="pricing-sub"> Connects individuals in need of a professional notary with experienced notaries who can assist them.</p>
                 <div class="pricing">
-                    <div class="price"><img style="height: 180px;"src="{% static 'images/company-images/notarycafe.webp'%}"/></div>
+                    <div class="price"><img style="height: 180px;"src="{% static 'images/company-images/notarycafe.svg'%}"/></div>
                 </div>
                 <a href="https://notarycafe.com/vivian.rashidi" class="button">Visit Website</a>
             </div>
@@ -396,7 +395,7 @@ data-featherlight-filter="a">
     <!--Footer-->
     <footer id="landing-footer" class="clearfix">
         <div class="row clearfix">
-            <img src="{% static 'images/vivian_footer.webp' %}" alt="Landing Page"/>
+            <img src="{% static 'images/vivian_footer.svg' %}" alt="Landing Page"/>
             <!--Social Icons in Footer-->
             <div class="col-2">
             </div>
