--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -3,11 +3,16 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-
-    
     <title>Nivico Notary Services</title>
-
-    
+    <script type="application/ld+json">
+        {
+          "@context" : "https://schema.org",
+          "@type" : "WebSite",
+          "name" : "Nivico Notary Services",
+          "alternateName" : "NNS",
+          "url" : "https://vivianrashidi.com/"
+        }
+      </script>
     <meta name="keywords" content="">
     <meta name="description" content="Perfect Notary Every Time, Notarize With Vivian">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
