--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
     
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" title="Favicon"/>
+    <link rel="icon" href="{% static 'images/favicon.png' %}" title="Favicon"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/namari-color.css' %}">
 
