--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,6 +1,6 @@
 {%load static%}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Nivico Notary Services</title>
@@ -15,7 +15,7 @@
       </script>
     <meta name="keywords" content="">
     <meta name="description" content="Perfect Notary Every Time, Notarize With Vivian">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     
     <link rel="icon" href="{% static 'images/favicon.png' %}" title="Favicon"/>
