change meta descrip
change meta descrip

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,7 +14,7 @@
         }
       </script>
     <meta name="keywords" content="">
-    <meta name="description" content="Perfect Notary Every Time, Notarize With Vivian">
+    <meta name="description" content="Perfect Notary Every Time, Notarize With Vivian. Available - 7 Days A Week, located near the nation's capital">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     
